disease detection ui changed and detection added

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,13 +1,16 @@
-fastapi 
-uvicorn 
-sqlalchemy 
-mysql-connector-python 
-python-multipart 
-pydantic 
-joblib 
+fastapi
+uvicorn
+sqlalchemy
+mysql-connector-python
+python-multipart
+pydantic
+joblib
 scikit-learn
-pandas 
+pandas
 numpy
-passlib[bcrypt] 
+passlib[bcrypt]
 python-jose[cryptography]
 requests
+torch
+torchvision
+Pillow
