--- a/krishibandhu_app/pubspec.yaml
+++ b/krishibandhu_app/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
     sdk: flutter
 
   # HTTP package for API calls
-  http: ^1.1.0
+  http: ^1.6.0
 
   # Cupertino icons for iOS style
   cupertino_icons: ^1.0.8
@@ -41,10 +41,10 @@ dependencies:
     sdk: flutter
 
   #image picker package
-  image_picker: ^0.8.7+4
+  image_picker: ^1.2.1
 
   # Google Fonts
-  google_fonts: ^6.1.0
+  google_fonts: ^6.3.3
 
   # Flutter Animate
   flutter_animate: ^4.5.0
@@ -52,6 +52,19 @@ dependencies:
   # Shared Preferences for storing tokens
   shared_preferences: ^2.2.2
 
+  # Path provider for file paths
+  path_provider: ^2.1.3
+
+  # Permission handler for runtime permissions
+  permission_handler: ^11.3.1
+
+  # Audio recording and playback
+  flutter_sound: ^9.0.0
+  audioplayers: ^6.5.1
+
+
+#speech to text
+  speech_to_text: ^7.3.0
 
 
 dev_dependencies:
@@ -63,7 +76,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^5.0.0
+  flutter_lints: ^6.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
